@@ -1,3 +1,9 @@
+2003-02-27  Frank Ch. Eigler  <fche@redhat.com>
+
+	* Makefile.am: Add gross make bug workarounds.  Tweaked
+	SUBDIRS and AM_CFLAGS.
+	* Makefile.in: Regenerated.
+
 2003-02-26  Frank Ch. Eigler  <fche@redhat.com>
 
 	Switch to dejagnu.
